# CmakeTutorial-techsgin

./: CMakeLists.txt
dlls/: CMakeLists.txt
dlls/dll1/: CMakeLists.txt  dll1.cpp  dll1.h
execs/: CMakeLists.txt
execs/exe1/: CMakeLists.txt  main.cpp
inc/: head1.h
libssrc/: CMakeLists.txt
libssrc/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
